# astrcodey

./: .clippy.toml  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_ISSUES.md  Cargo.toml  Cargo.toml.testlint  LICENSE  PROJECT_ARCHITECTURE.md  README.md  README_CN.md  deny.toml  refact.md  release-notes.md  rust-toolchain.toml  rustfmt.toml  todo.md  目标.md
adapter-agents/: Cargo.toml
adapter-agents/src/: lib.rs
adapter-agents/src/builtin_agents/: execute.md  explore.md  reviewer.md
adapter-llm/: Cargo.toml
adapter-llm/src/: cache_tracker.rs  lib.rs  openai.rs  openai_tests.rs
adapter-llm/src/openai/: dto.rs  responses.rs
adapter-prompt/: Cargo.toml
adapter-prompt/src/: block.rs  composer.rs  context.rs  contribution.rs  contributor.rs  core_port.rs  diagnostics.rs  layered_builder.rs  lib.rs  prompt_plan.rs  template.rs
adapter-prompt/src/contributors/: agent_profile_summary.rs  agents_md.rs  capability_prompt.rs  environment.rs  identity.rs  mod.rs  response_style.rs  shared.rs  skill_summary.rs  system_prompt_instruction.rs  workflow_examples.rs
adapter-skills/: Cargo.toml  build.rs
adapter-skills/src/: lib.rs  skill_catalog.rs  skill_loader.rs  skill_spec.rs
adapter-skills/src/builtin_skills/: mod.rs
adapter-storage/: Cargo.toml
adapter-storage/src/: config_store.rs  lib.rs
adapter-storage/src/session/: batch_appender.rs  checkpoint.rs  event_log.rs  iterator.rs  mod.rs  paths.rs  query.rs  repository.rs  turn_lock.rs
adapter-tools/: Cargo.toml
adapter-tools/src/: lib.rs  test_support.rs
adapter-tools/src/agent_tools/: close_tool.rs  collab_result_mapping.rs  mod.rs  observe_tool.rs  result_mapping.rs  send_tool.rs  spawn_tool.rs  tests.rs
adapter-tools/src/builtin_tools/: apply_patch.rs  edit_file.rs  find_files.rs  fs_common.rs  grep.rs  mod.rs  read_file.rs  shell.rs  skill_tool.rs  task_write.rs  tool_search.rs  write_file.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/app/: coordinator.rs  mod.rs  reducer.rs
cli/src/bottom_pane/: layout.rs  mod.rs  model.rs  render.rs
cli/src/capability/: mod.rs
cli/src/chat/: mod.rs  surface.rs
cli/src/command/: mod.rs
cli/src/launcher/: mod.rs
cli/src/render/: wrap.rs
cli/src/state/: conversation.rs  debug.rs  interaction.rs  mod.rs  render.rs  shell.rs  thinking.rs  transcript_cell.rs
cli/src/tui/: mod.rs  runtime.rs
cli/src/ui/: cells.rs  composer.rs  custom_terminal.rs  insert_history.rs  markdown.rs  mod.rs  overlay.rs  palette.rs  text.rs  theme.rs
client/: Cargo.toml
client/src/: error.rs  lib.rs  transport.rs
context-window/: Cargo.toml
context-window/src/: compaction.rs  file_access.rs  lib.rs  micro_compact.rs  mod.rs  prune_pass.rs  request.rs  settings.rs  token_usage.rs  tool_result_budget.rs  tool_results.rs
context-window/src/compaction/: protocol.rs  sanitize.rs  xml_parsing.rs
crates/astrcode-ai/: Cargo.toml
crates/astrcode-ai/src/: anthropic.rs  cache.rs  common.rs  compat.rs  google_genai.rs  lib.rs  openai.rs  provider_catalog.rs  retry.rs  serialization.rs  stream_decoder.rs  tool_result_wire.rs
crates/astrcode-bundled-extensions/: Cargo.toml
crates/astrcode-bundled-extensions/src/: lib.rs
crates/astrcode-cli/: Cargo.toml
crates/astrcode-cli/src/: acp_bridge.rs  exec.rs  main.rs  transport.rs  tui.rs
crates/astrcode-cli/tests/: end_to_end.rs  test_transport.rs
crates/astrcode-client/: Cargo.toml
crates/astrcode-client/src/: client.rs  error.rs  lib.rs  stream.rs  transport.rs
crates/astrcode-client/tests/: client_test.rs
crates/astrcode-context/: Cargo.toml
crates/astrcode-context/src/: budget.rs  compaction.rs  context_assembler.rs  context_engine.rs  contribution.rs  file_access.rs  lib.rs  manager.rs  post_compact_enricher.rs  prompt_engine.rs  pruning.rs  settings.rs  token_budget.rs  token_usage.rs  tool_results.rs
crates/astrcode-context/tests/: token_budget_gate.rs
crates/astrcode-core/: Cargo.toml
crates/astrcode-core/src/: context.rs  event.rs  event_bus.rs  extension.rs  lib.rs  llm.rs  message_attachment.rs  permission.rs  prompt.rs  read_tool_image.rs  render.rs  storage.rs  tool.rs  tool_ui.rs  types.rs
crates/astrcode-eval/: Cargo.toml
crates/astrcode-eval/src/: adapter.rs  case.rs  client.rs  judge.rs  lib.rs  metrics.rs  report.rs  runner.rs  setup.rs
crates/astrcode-extension-agent-tools/: Cargo.toml  bundled-extension.json  extension.json
crates/astrcode-extension-agent-tools/src/: agent.rs  ffi_types.rs  lib.rs  task.rs
crates/astrcode-extension-channels/: Cargo.toml
crates/astrcode-extension-channels/src/: lib.rs
crates/astrcode-extension-mcp/: Cargo.toml
crates/astrcode-extension-mcp/src/: client.rs  config.rs  http_client.rs  lib.rs  names.rs  pool.rs  protocol.rs  search.rs
crates/astrcode-extension-memory/: Cargo.toml
crates/astrcode-extension-memory/src/: config.rs  handlers.rs  index.rs  lib.rs  pipeline.rs  pipeline_prompts.rs  prompts.rs  scope.rs  store.rs  turn_recall.rs
crates/astrcode-extension-mode/: Cargo.toml  bundled-extension.json
crates/astrcode-extension-mode/builtin_prompts/: plan_entry.md  plan_exit.md  plan_mode.md  plan_template.md
crates/astrcode-extension-mode/src/: ask_user.rs  catalog.rs  lib.rs  prompts.rs  store.rs  tools.rs
crates/astrcode-extension-sdk/: Cargo.toml
crates/astrcode-extension-sdk/src/: builder.rs  lib.rs  manifest.rs  session.rs  session_inspect.rs  wasm_abi.rs
crates/astrcode-extension-skill/: Cargo.toml  bundled-extension.json
crates/astrcode-extension-task-tools/: Cargo.toml  extension.json
crates/astrcode-extension-todo-tool/: Cargo.toml  bundled-extension.json  extension.json
crates/astrcode-extension-web-tools/: Cargo.toml
crates/astrcode-extensions/: Cargo.toml
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/http/: agent.rs  (+10 more)
protocol/tests/: conformance.rs  conversation_conformance.rs  http_dto_contracts.rs  terminal_conformance.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  instance.rs  main.rs  paths.rs
(+691 files in other folders)
