[workspace]
resolver = "2"
default-members = ["crates/astrcode-cli"]
members = [
    "crates/astrcode-core",
    "crates/astrcode-support",
    "crates/astrcode-ai",
    "crates/astrcode-tools",
    "crates/astrcode-storage",
    "crates/astrcode-context",
    "crates/astrcode-session",
    "crates/astrcode-extensions",
    "crates/astrcode-bundled-extensions",
    "crates/astrcode-server",
    "crates/astrcode-protocol",
    "crates/astrcode-client",
    "crates/astrcode-cli",
    "crates/astrcode-log",
    "crates/astrcode-extension-agent-tools",
    "crates/astrcode-extension-mcp",
    "crates/astrcode-extension-skill",
    "crates/astrcode-extension-todo-tool",
    "crates/astrcode-extension-mode",
    "crates/astrcode-extension-memory",
    "crates/astrcode-eval",
    "src-tauri",
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "fs", "signal", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
arc-swap = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
fs2 = "0.4"
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_yaml = "0.9"
tempfile = "3"
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
regex = "1"
walkdir = "2"
toml = "0.8"
glob = "0.3"
globset = "0.4"
ignore = "0.4"
similar = "2"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
notify = "8"

# --- Profiles ---

[profile.dev]
opt-level = 0
debug = true

# Optimize dependencies in dev mode to speed up runtime without hurting
# incremental compilation of workspace crates.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
