[workspace]
resolver = "2"
default-members = ["crates/astrcode-cli"]
members = [
    "crates/astrcode-core",
    "crates/astrcode-support",
    "crates/astrcode-ai",
    "crates/astrcode-tools",
    "crates/astrcode-storage",
    "crates/astrcode-context",
    "crates/astrcode-session",
    "crates/astrcode-extensions",
    "crates/astrcode-extension-sdk",
    "crates/astrcode-bundled-extensions",
    "crates/astrcode-server",
    "crates/astrcode-protocol",
    "crates/astrcode-client",
    "crates/astrcode-cli",
    "crates/astrcode-log",
    "crates/astrcode-extension-agent-tools",
    "crates/astrcode-extension-mcp",
    "crates/astrcode-extension-skill",
    "crates/astrcode-extension-todo-tool",
    "crates/astrcode-extension-mode",
    "crates/astrcode-extension-memory",
    "crates/astrcode-eval",
    "src-tauri",
]

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
# Base tokio: enable features per crate to avoid pulling unused subsystems.
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
async-trait = "0.1"
arc-swap = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
fs2 = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_yaml = "0.9"
tempfile = "3"
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
regex = "1"
walkdir = "2"
toml = "0.8"
glob = "0.3"
globset = "0.4"
ignore = "0.4"
similar = "3.1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
notify = "8"
libc = "0.2"
getrandom = "0.3"
agent-client-protocol = "0.11"
grep-searcher = "0.1"
grep-regex = "0.1"
portable-pty = "0.9"
ratatui = { version = "0.30", features = ["scrolling-regions"] }
ratatui-crossterm = { version = "0.1", features = ["scrolling-regions"] }
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"
anyhow = "1"
rand = "0.9"
portpicker = "0.1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"

# --- Profiles ---

[profile.dev]
opt-level = 0
debug = true

# Optimize dependencies in dev mode to speed up runtime without hurting
# incremental compilation of workspace crates.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false
