[workspace]
resolver = "2"
default-members = ["crates/astrcode-cli"]
members = [
    "crates/astrcode-kernel",
    "crates/astrcode-core",
    "crates/astrcode-support",
    "crates/astrcode-ai",
    "crates/astrcode-tools",
    "crates/astrcode-storage",
    "crates/astrcode-context",
    "crates/astrcode-session",
    "crates/astrcode-extensions",
    "crates/astrcode-extension-sdk",
    "crates/astrcode-bundled-extensions",
    "crates/astrcode-server",
    "crates/astrcode-protocol",
    "crates/astrcode-client",
    "crates/astrcode-cli",
    "crates/astrcode-log",
    "crates/astrcode-extension-agent-tools",
    "crates/astrcode-extension-mcp",
    "crates/astrcode-extension-skill",
    "crates/astrcode-extension-todo-tool",
    "crates/astrcode-extension-mode",
    "crates/astrcode-extension-goal",
    "crates/astrcode-extension-memory",
    "crates/astrcode-extension-channels",
    "crates/astrcode-extension-web-tools",
    "crates/astrcode-eval",
    "src-tauri",
]

[workspace.package]
version = "0.3.8"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
# Base tokio: enable features per crate to avoid pulling unused subsystems.
tokio = { version = "1.52.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
async-trait = "0.1.89"
arc-swap = "1.9.1"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
dirs = "6.0.0"
fs2 = "0.4.3"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
parking_lot = "0.12.5"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
serde_yaml = "0.9.34"
tempfile = "3.27.0"
tokio-util = "0.7.18"
tokio-stream = { version = "0.1.18", features = ["sync"] }
regex = "1.12.3"
walkdir = "2.5.0"
toml = "0.8.2"
glob = "0.3.3"
globset = "0.4.18"
ignore = "0.4.25"
similar = "3.1.0"
base64 = "0.22.1"
arboard = "3.6.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
clap = { version = "4.6.1", features = ["derive"] }
axum = "0.8.9"
tower-http = { version = "0.6.11", features = ["cors"] }
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
libc = "0.2.186"
getrandom = "0.3.4"
agent-client-protocol = "0.11.1"
grep-searcher = "0.1.16"
grep-regex = "0.1.14"
portable-pty = "0.9.0"
sha2 = "0.10.9"
ratatui = { version = "0.30.0", features = ["scrolling-regions"] }
ratatui-crossterm = { version = "0.1.0", features = ["scrolling-regions"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-width = "0.2.2"
anyhow = "1.0.102"
rand = "0.9.4"
portpicker = "0.1.1"
tauri = { version = "2.11.2", features = [] }
tauri-build = { version = "2.6.2", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-http = "2.5.9"
scraper = "0.27.0"
html2text = "0.17.1"
url = "2.5.8"

# --- Profiles ---

[profile.dev]
opt-level = 0
debug = true

# Optimize dependencies in dev mode to speed up runtime without hurting
# incremental compilation of workspace crates.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false
