[package]
name = "astrcode-adapter-llm"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-runtime-contract = { path = "../runtime-contract" }
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
