[package]
name = "astrcode-adapter-prompt"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-runtime-contract = { path = "../runtime-contract" }
astrcode-support = { path = "../support" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
astrcode-core = { path = "../core", features = ["test-support"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tempfile.workspace = true
