[package]
name = "astrcode-adapter-skills"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
astrcode-core = { path = "../core" }
astrcode-support = { path = "../support" }
log.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
astrcode-core = { path = "../core", features = ["test-support"] }
tempfile.workspace = true
