[package]
name = "astrcode-adapter-tools"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-runtime-contract = { path = "../runtime-contract" }
astrcode-support = { path = "../support" }
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
glob.workspace = true
globset.workspace = true
ignore.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
