[package]
name = "astrcode-cli"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-client = { path = "../client" }
astrcode-core = { path = "../core" }
astrcode-support = { path = "../support" }
anyhow.workspace = true
async-trait.workspace = true
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
pulldown-cmark = "0.9.6"
reqwest.workspace = true
ratatui = { version = "0.30.0", features = ["scrolling-regions"] }
serde.workspace = true
serde_json.workspace = true
textwrap = "0.16.2"
thiserror.workspace = true
tokio.workspace = true
unicode-segmentation = "1.13.2"
unicode-width = "0.2"
