[package]
name = "astrcode-client"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-protocol = { path = "../protocol" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
