[package]
name = "astrcode-protocol"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-runtime-contract = { path = "../runtime-contract" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
