[package]
name = "astrcode-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
rand = "0.9"
portpicker = "0.1"
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
