[package]
name = "astrcode-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-http = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
rand = { workspace = true }
portpicker = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
