[package]
name = "astrcode-ai"
version = "0.1.0"
edition = "2021"
description = "LLM provider abstraction: OpenAI-compatible API, SSE streaming, caching, retries"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
