[package]
name = "astrcode-ai"
version = "0.1.7"
edition = "2021"
description = "LLM provider abstraction: OpenAI-compatible API, SSE streaming, caching, retries"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json"] }
futures-util = { workspace = true }
