[package]
name = "astrcode-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider integrations and streaming"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json"] }
futures-util = { workspace = true }
getrandom = { workspace = true }
