[package]
name = "astrcode-cli"
version = "0.1.0"
edition = "2021"
description = "CLI entry point: tui, exec, and server commands"
default-run = "astrcode"

[[bin]]
name = "astrcode"
path = "src/main.rs"

[features]
dev-mode = ["dep:astrcode-eval"]

[dependencies]
astrcode-server = { path = "../astrcode-server" }
astrcode-client = { path = "../astrcode-client" }
astrcode-core = { path = "../astrcode-core" }
astrcode-protocol = { path = "../astrcode-protocol" }
astrcode-support = { path = "../astrcode-support" }
astrcode-eval = { path = "../astrcode-eval", optional = true }
astrcode-log = { path = "../astrcode-log" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
ratatui = { version = "0.30", features = ["scrolling-regions"] }
ratatui-crossterm = { version = "0.1", features = ["scrolling-regions"] }
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"
tokio-stream = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
