[package]
name = "astrcode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entry point: tui, exec, and server commands"
default-run = "astrcode"

[[bin]]
name = "astrcode"
path = "src/main.rs"

[features]
dev-mode = ["dep:astrcode-eval"]

[dependencies]
astrcode-server = { path = "../astrcode-server" }
astrcode-client = { path = "../astrcode-client" }
astrcode-core = { path = "../astrcode-core" }
astrcode-protocol = { path = "../astrcode-protocol" }
astrcode-support = { path = "../astrcode-support" }
astrcode-eval = { path = "../astrcode-eval", optional = true }
astrcode-log = { path = "../astrcode-log" }
base64 = { workspace = true }
astrcode-context = { path = "../astrcode-context" }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros", "io-std", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
async-trait = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
ratatui-crossterm = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
astrcode-server = { path = "../astrcode-server", features = ["testing"] }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros"] }