[package]
name = "astrcode-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client SDK for in-process and HTTP integration with astrcode server"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
astrcode-protocol = { path = "../astrcode-protocol" }
astrcode-support = { path = "../astrcode-support" }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
