[package]
name = "astrcode-context"
version = "0.1.0"
edition = "2021"
description = "LLM context window management: token estimation and summary compaction"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
