[package]
name = "astrcode-context"
version = "0.1.0"
edition = "2021"
description = "LLM context window management: token estimation and summary compaction"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
