[package]
name = "astrcode-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM context window management: token estimation and summary compaction"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
