[package]
name = "astrcode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core shared types and traits for the astrcode AI coding agent platform"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
