[package]
name = "astrcode-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
tempfile = "3"
walkdir = "2"
