[package]
name = "astrcode-eval"
version = "0.1.3"
edition = "2021"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
