[package]
name = "astrcode-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent task evaluation framework: benchmark runner, scoring judge, metrics collection, and report generation"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
tokio = { workspace = true, features = ["sync", "time", "process", "rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
parquet = { version = "59", default-features = false, features = ["brotli", "flate2-zlib-rs", "lz4", "snap", "zstd"] }
