[package]
name = "astrcode-extension-agent-tools"
version = "0.1.7"
edition = "2021"
description = "Subagent delegation extension"

[lib]
crate-type = ["rlib"]

[dependencies]
astrcode-core = { path = "../astrcode-core" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
