[package]
name = "astrcode-extension-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bundled Telegram channel extension"

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
async-trait = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
