[package]
name = "astrcode-extension-mcp"
version = "0.1.2"
edition = "2021"
description = "Stdio MCP tool extension"

[lib]
crate-type = ["rlib"]

[dependencies]
astrcode-core = { path = "../astrcode-core" }
astrcode-protocol = { path = "../astrcode-protocol" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
