[package]
name = "astrcode-extension-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stdio MCP tool extension"

[lib]
crate-type = ["rlib"]

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
astrcode-protocol = { path = "../astrcode-protocol" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "process", "io-util", "net", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }
