[package]
name = "astrcode-extension-memory"
version = "0.1.2"
edition = "2021"
description = "Codex-style markdown memory extension"

[lib]
crate-type = ["rlib"]

[dependencies]
astrcode-core = { path = "../astrcode-core" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
