[package]
name = "astrcode-extension-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Codex-style markdown memory extension"

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk", features = ["trusted-bundled"] }
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
