[package]
name = "astrcode-extension-mode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent running mode switching extension (code / plan)"

[lib]
crate-type = ["rlib"]

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
