[package]
name = "astrcode-extension-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable authoring surface for AstrCode extensions"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
