[package]
name = "astrcode-extension-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable authoring surface for AstrCode extensions"

[features]
default = []
trusted-bundled = []

[dependencies]
astrcode-core = { path = "../astrcode-core" }
astrcode-protocol = { path = "../astrcode-protocol" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "io-std", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
